--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/setup-julia@latest
