--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,6 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 EntropyHub = "3938faea-3bfa-4bc3-8092-0c6746ff9af1"
+
+[compat]
+Documenter = "0.26"
