--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "EntropyHub"
 uuid = "3938faea-3bfa-4bc3-8092-0c6746ff9af1"
-authors = ["Matthew W. Flood <entropyhubproject@gmail.com>"]
-version = "0.0.1"
+authors = ["Matthew W. Flood <info@entropyhub.xyz>"]
+version = "0.1.0
 
 [deps]
 Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
