--- a/Project.toml
+++ b/Project.toml
@@ -20,7 +20,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 
 [compat]
-julia = ">= 1.5"
+julia = "1.5"
 Clustering = "0.14.2"
 Combinatorics = "1.0.2"
 DSP = "0.6.8"
