--- a/Project.toml
+++ b/Project.toml
@@ -1,14 +1,14 @@
 name = "EntropyHub"
 uuid = "3938faea-3bfa-4bc3-8092-0c6746ff9af1"
 authors = ["Matthew W. Flood <info@entropyhub.xyz>"]
-version = "0.2"
+version = "1.0.0"
 
 [deps]
 Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
+DataInterpolations = "82cc6244-b520-54b8-b5a6-8a565e85f1d0"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
-Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 GroupSlices = "d853e229-7c7c-56e9-b6be-9a1acc5f13d9"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
@@ -20,17 +20,17 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 
 [compat]
-Clustering = "0.14.2"
-Combinatorics = "1.0.2"
-DSP = "0.6.8"
-Dierckx = "0.4.2"
-FFTW = "1.2.4"
-GroupSlices = "0.0.3"
-HTTP = "0.8.19"
-Plots = "1.10.3"
-StatsBase = "0.33.2"
-StatsFuns = "0.9.6"
-julia = "1.5"
+Clustering = ">= 0.14.2"
+Combinatorics = ">= 1.0.2"
+DSP = ">= 0.6.8"
+DataInterpolations = ">= 4.6.0"
+FFTW = ">= 1.2.4"
+GroupSlices = ">= 0.0.3"
+HTTP = ">= 0.9.17"
+Plots = ">= 1.10.3"
+StatsBase = ">= 0.33.2"
+StatsFuns = ">= 0.9.6"
+julia = ">= 1.5"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
