Change DataInterpolations compat

--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 Clustering = "= 0.14.2"
 Combinatorics = "= 1.0.2"
 DSP = "= 0.6.8"
-DataInterpolations = "= 4.6.0"
+DataInterpolations = ">= 4.6.0"
 FFTW = ">= 1.2.4"
 GroupSlices = "= 0.0.3"
 HTTP = "= 0.9.17"
