--- a/Project.toml
+++ b/Project.toml
@@ -29,7 +29,7 @@ HTTP = "= 0.9.17"
 Plots = "= 1.10.3"
 StatsBase = "= 0.33.2"
 StatsFuns = "= 0.9.6"
-julia = "= 1.8"
+julia = "= 1.8, 2"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
