--- a/Project.toml
+++ b/Project.toml
@@ -23,13 +23,13 @@ StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 Clustering = "= 0.14.2"
 Combinatorics = "= 1.0.2"
 DSP = "= 0.6.8"
-FFTW = "= 1.2.4"
+FFTW = "= 1.8"
 GroupSlices = "= 0.0.3"
 HTTP = "= 0.9.17"
-Plots = "= 1.10.3"
-StatsBase = "= 0.33.2"
-StatsFuns = "= 0.9.6"
-julia = "= 1.8, 2"
+Plots = "= 1.39"
+StatsBase = "= 0.33.21"
+StatsFuns = "= 0.9.7"
+julia = "= 1.8.4"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
