--- a/Project.toml
+++ b/Project.toml
@@ -22,6 +22,7 @@ StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 [compat]
 Clustering = "= 0.14.2"
 Combinatorics = "= 1.0.2"
+DataInterpolations = "4.6.0"
 DSP = "= 0.6.8"
 FFTW = "= 1.8"
 GroupSlices = "= 0.0.3"
