--- a/Project.toml
+++ b/Project.toml
@@ -20,17 +20,17 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 
 [compat]
-Clustering = "= 0.14.2"
-Combinatorics = "= 1.0.2"
+Clustering = "0.14.2"
+Combinatorics = "1.0.2"
 DataInterpolations = "4.6.0"
-DSP = "= 0.6.8"
-FFTW = "= 1.8"
-GroupSlices = "= 0.0.3"
-HTTP = "= 0.9.17"
-Plots = "= 1.39"
-StatsBase = "= 0.33.21"
-StatsFuns = "= 0.9.7"
-julia = "= 1.8.4"
+DSP = "0.6.8"
+FFTW = "1.8"
+GroupSlices = "0.0.3"
+HTTP = "0.9.17"
+Plots = "1.39"
+StatsBase = "0.33.21"
+StatsFuns = "0.9.7"
+julia = "1.8.4"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
