--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: julia
 notifications:
   email: false
 julia:
-  - 1.6
+  - 1.8
   - 1
   - nightly
 os:
@@ -11,13 +11,14 @@ os:
 cache:
   directories:
     - ~/.julia/artifacts
+    
 jobs:
   fast_finish: true
   allow_failures:
     - julia: nightly
   include:
-    - stage: Documentation
-      julia: 1.8
+    - stage: "Documentation"
+      julia: 1.6
       os: windows
       script: |
         julia --project=docs -e '
