--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,13 @@ jobs:
   include:
     - stage: "Documentation"
       julia: 1.6
-      os: linux
+      os: windows
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
                                                Pkg.instantiate()'
         - julia --project=docs/ docs/make.jl
       after_success: skip
-      
+
 after_success:
   - |
     julia -e '
