--- a/.travis.yml
+++ b/.travis.yml
@@ -7,16 +7,16 @@ julia:
   - 1
   - nightly
 os:
-  - windows
+  - linux
 cache:
   directories:
     - ~/.julia/artifacts
     
 jobs:
   include:
-    - stage: "Documentation"
-      julia: 1.6
-      os: windows
+    - stage: Documentation
+      julia: 1.8
+      os: linux
       script:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
                                                Pkg.instantiate()'
@@ -24,8 +24,7 @@ jobs:
       after_success: skip
 
 after_success:
-  - |
-    julia -e '
+  -   julia -e '
       using Pkg
       Pkg.add("Coverage")
       using Coverage
