--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ jobs:
 
 after_success:
   -   julia -e '
-      using Pkg
-      Pkg.add("Coverage")
-      using Coverage
+      using Pkg;
+      Pkg.add("Coverage");
+      using Coverage;
       Coveralls.submit(process_folder())'
