--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ notifications:
   email: false
 julia:
   - 1.8
+  - 1
   - nightly
 os:
   - linux
@@ -12,19 +13,28 @@ cache:
     - ~/.julia/artifacts
     
 jobs:
+  fast_finish: true
+  allow_failures:
+    - julia: nightly
   include:
-    - stage: Documentation
+    - stage: "Documentation"
       julia: 1.8
       os: linux
-      script:
-        - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
-                                               Pkg.instantiate()'
-        - julia --project=docs/ docs/make.jl
+      script: |
+        julia --project=docs -e '
+          using Pkg
+          Pkg.develop(PackageSpec(path=pwd()))
+          Pkg.instantiate()
+          using Documenter: DocMeta, doctest
+          using EntropyHub
+          DocMeta.setdocmeta!(EntropyHub, :DocTestSetup, :(using EntropyHub); recursive=true)
+          doctest(EntropyHub)
+          include("docs/make.jl")'
       after_success: skip
-
 after_success:
-  -   julia -e '
-      using Pkg;
-      Pkg.add("Coverage");
-      using Coverage;
+  - |
+    julia -e '
+      using Pkg
+      Pkg.add("Coverage")
+      using Coverage
       Coveralls.submit(process_folder())'
