--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -6,6 +6,8 @@ on:
   push:
     branches:
       - master
+      - /^release-.*$/
+      - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
     tags: '*'
   pull_request:
 
