--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "EntropyHub"
 uuid = "3938faea-3bfa-4bc3-8092-0c6746ff9af1"
 authors = ["Matthew W. Flood <info@entropyhub.xyz>"]
-version = "1.0.1"
+version = "2.0"
 
 [deps]
 Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
@@ -13,6 +13,7 @@ FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 GroupSlices = "d853e229-7c7c-56e9-b6be-9a1acc5f13d9"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
@@ -22,8 +23,8 @@ StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 [compat]
 Clustering = "0.14.2"
 Combinatorics = "1.0.2"
-DataInterpolations = "4.6.0"
 DSP = "0.6.8"
+DataInterpolations = "4.6.0"
 FFTW = "1.8"
 GroupSlices = "0.0.3"
 HTTP = "0.9.17"
